[package]
name = "blobi-leap-contract"
version = "0.1.0"
edition = "2021"
description = "Blobi Leap — On-chain score registry and cosmic card NFTs on Stellar/Soroban"
repository = "https://github.com/blobileap/blobileap"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "21.7.6"

[dev-dependencies]
soroban-sdk = { version = "21.7.6", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
